# goes-py

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requeriments.txt  setup.py
examples/: ABIdownload_example1.py  GLMdownload_example1.py
examples/plotting_data/: README.md  cpt_convert.py  environment.yml  goes16_IR_plot.ipynb  goes16_VIS_plot.ipynb  goes_plot.py  goespy_download_plot_example.ipynb
examples/plotting_data/cmap_goes_sat/: IR4AVHRR6.cpt
examples/raw_functions/: ABI_Downloader.py  GLM_Downloader.py  __isAList.py  checkFiles.py  checkSize.py  julianList.py
goespy/: Downloader.py  __init__.py  checkData.py  goesteste.py  utils.py
goespy/examples/: ABIdownload_example1.py  GLMdownload_example1.py
goespy/examples/raw_functions/: ABI_Downloader.py  GLM_Downloader.py  __isAList.py  createPathGoesData.py
goespy/services/: awsService.py
goespy/tests/: test_download_function.py
